--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "n8n-railway",
   "version": "1.0.0",
   "description": "n8n on Railway",
-  "main": "index.js",
   "scripts": {
-    "start": "n8n start"
+    "start": "npx n8n start"
   },
   "dependencies": {
-    "n8n": "^1.0.0"
+    "n8n": "latest"
   },
   "engines": {
     "node": "18.x"
